<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="mynanodegree">My Nanodegree Apps!</string>
    <string name="popularMoviesText">Popular Movies</string>
    <string name="stockHawkText">Stock Hawk</string>
    <string name="buildItBiggerText">Build it Bigger</string>
    <string name="yourAppMaterialText">Make Your App Material</string>
    <string name="ubiquitousText">Go Ubiquitous</string>
    <string name="capstoneText">Capstone</string>
</resources>
