<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saravanan.myappportfolio.AppsListActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mynanodegree"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/textColor"
        android:id="@+id/tvNanogegree" />

    <Button
        android:text="@string/popularMoviesText"
        android:id="@+id/btnPopularMovies"
        android:layout_below="@+id/tvNanogegree"
        style="@style/customButtonStyle" />

    <Button
        android:text="@string/stockHawkText"
        android:id="@+id/btnStockhawk"
        android:layout_below="@+id/btnPopularMovies"
        style="@style/customButtonStyle" />


    <Button
        android:text="@string/buildItBiggerText"
        android:id="@+id/btnBuildItBigger"
        android:layout_below="@+id/btnStockhawk"
        style="@style/customButtonStyle"
         />

    <Button
        android:text="@string/yourAppMaterialText"
        android:id="@+id/btnMakeAppBigger"
        android:layout_below="@+id/btnBuildItBigger"
        style="@style/customButtonStyle" />

    <Button
        android:text="@string/ubiquitousText"
        android:id="@+id/btnGoUbiquitous"
        android:layout_below="@+id/btnMakeAppBigger"
        style="@style/customButtonStyle"
         />

    <Button
        android:text="@string/capstoneText"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnGoUbiquitous"
        style="@style/customButtonStyle"
         />

</RelativeLayout>

</ScrollView>